# openssl_plugin

./: README.md  pubspec.yaml
android/: CMakeLists.txt  CmakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: envelope.cpp  native-lib.cpp
android/src/main/cpp/include/: envelope.h
android/src/main/cpp/include/openssl/: opensslconf.h
android/src/main/kotlin/com/example/openssl_plugin/: OpensslPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/openssl_plugin_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: openssl_plugin.podspec
ios/Classes/: OpensslPlugin.h  OpensslPlugin.m  SwiftOpensslPlugin.swift
lib/: openssl_plugin.dart
test/: openssl_plugin_test.dart
